# android-whisper

./: CMakeLists.txt  README.md  build.sh  main.cpp  run.sh  run_android.sh
include/: onnxruntime_c_api.h
model/: blocks.0.attn.out.bias  blocks.0.attn.query.bias  blocks.0.attn.value.bias  blocks.0.attn_ln.bias  blocks.0.attn_ln.weight  blocks.0.mlp.0.bias  blocks.0.mlp.2.bias  blocks.0.mlp_ln.bias  blocks.0.mlp_ln.weight  blocks.1.attn.out.bias  blocks.1.attn.query.bias  blocks.1.attn.value.bias  blocks.1.attn_ln.bias  blocks.1.attn_ln.weight  blocks.1.mlp.0.bias  blocks.1.mlp.2.bias  blocks.1.mlp_ln.bias  blocks.1.mlp_ln.weight  blocks.10.attn.out.bias  blocks.10.attn.query.bias  blocks.10.attn.value.bias  blocks.10.attn_ln.bias  blocks.10.attn_ln.weight  blocks.10.mlp.0.bias  blocks.10.mlp.2.bias  blocks.10.mlp_ln.bias  blocks.10.mlp_ln.weight  blocks.11.attn.out.bias  blocks.11.attn.query.bias  blocks.11.attn.value.bias  blocks.11.attn_ln.bias  blocks.11.attn_ln.weight  blocks.11.mlp.0.bias  blocks.11.mlp.2.bias  blocks.11.mlp_ln.bias  blocks.11.mlp_ln.weight  blocks.12.attn.out.bias  blocks.12.attn.query.bias  blocks.12.attn.value.bias  blocks.12.attn_ln.bias  (+255 more)
nnapi/: CMakeLists.txt  main.cpp  run_android.sh
onnx/: linear.onnx  main.cpp  run_android.sh
